@@ -1,4 +1,8 @@
-﻿svs 09.04.2015 06:54:08 +0300 - build 4338
+﻿zg 10.04.2015 01:25:50 +0200 - build 4339
+
+1. при ненулевом FarDialogItem.MaxLength некорректно инициализировался элемент диалога.
+
+svs 09.04.2015 06:54:08 +0300 - build 4338
 
 1. SQLite 3.8.9
 
